Add copyright link to footer

--- a/index.html
+++ b/index.html
@@ -623,7 +623,10 @@
         </div>
         <hr class="border-gray-100 mb-8 w-24 mx-auto" />
         <p class="text-xs text-gray-400 uppercase tracking-widest mb-2">
-          © 2026 Kodinginaja
+          Portofolio by 
+          <a href="https://kodinginaja.biz.id/" target="_blank" class="hover:text-rose transition-colors duration-300">
+            Kodinginaja.biz.id
+          </a>
         </p>
       </div>
     </footer>
