Change footer link hover color to green

--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@
         <hr class="border-gray-100 mb-8 w-24 mx-auto" />
         <p class="text-xs text-gray-400 uppercase tracking-widest mb-2">
           Portofolio by 
-          <a href="https://kodinginaja.biz.id/" target="_blank" class="hover:text-rose transition-colors duration-300">
+          <a href="https://kodinginaja.biz.id/" target="_blank" class="hover:text-green-600 transition-colors duration-300 font-bold">
             Kodinginaja.biz.id
           </a>
         </p>
