Optimize images to WebP < 200KB, update About Me layout, and add LinkedIn link

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     >
       <div class="max-w-7xl mx-auto flex justify-between items-center">
         <div class="text-xl font-bold tracking-wider font-serif uppercase">
-          Dinda Natasya
+          Dinda Natasya Artaviana
         </div>
         <div
           class="hidden md:flex space-x-8 text-sm font-medium uppercase tracking-widest"
@@ -81,7 +81,7 @@
             class="w-64 h-64 md:w-80 md:h-80 rounded-full border-4 border-rose overflow-hidden bg-gray-200"
           >
             <img
-              src="./Assets/Images/Foto Diri_Dinda Natasya Artaviana.webp"
+              src="./Assets/Images/Foto Diri_Dinda Natasya Artaviana.jpg"
               alt="Dinda Natasya"
               class="w-full h-full object-cover"
             />
@@ -99,15 +99,24 @@
     <!-- Tentang Saya Section -->
     <section id="about" class="py-24 bg-white">
       <div class="max-w-7xl mx-auto px-6">
-        <div class="grid md:grid-cols-3 gap-16">
-          <div class="md:col-span-1">
+        <div class="grid md:grid-cols-12 gap-16 items-center">
+          <div class="md:col-span-4 fade-in">
+            <div
+              class="relative rounded-2xl overflow-hidden shadow-2xl border-4 border-rose/20 lg:h-[400px] h-[300px]"
+            >
+              <img
+                src="./Assets/Images/Foto Diri_Dinda Natasya Artaviana-About.webp"
+                alt="Dinda Natasya"
+                class="w-full h-full object-cover transform hover:scale-105 transition-transform duration-500"
+              />
+            </div>
+          </div>
+          <div class="md:col-span-8 text-gray-600 leading-relaxed space-y-6">
             <h2
-              class="text-3xl font-serif text-teal-dark border-l-4 border-rose pl-4"
+              class="text-3xl font-serif text-teal-dark border-l-4 border-rose pl-4 mb-8"
             >
               Tentang Saya
             </h2>
-          </div>
-          <div class="md:col-span-2 text-gray-600 leading-relaxed space-y-6">
             <p>
               Saya <strong>Dinda Natasya Artaviana</strong>, mahasiswa S1 Teknik
               Logistik dengan ketertarikan pada pengembangan sistem logistik,
@@ -204,7 +213,7 @@
                     rgba(13, 46, 51, 0.3) 0%,
                     rgba(26, 74, 82, 0.3) 100%
                   ),
-                  url(&quot;./Assets/Images/Student Staff Kerja Sama_Dinda.webp&quot;);
+                  url(&quot;./Assets/Images/humas.webp&quot;);
                 background-size: cover;
                 background-position: center;
               "
@@ -237,7 +246,20 @@
           </div>
 
           <div class="flex flex-col md:flex-row gap-6 relative">
-            <div class="md:w-1/3 experience-card-improvindo">
+            <div
+              class="md:w-1/3 experience-card-improvindo"
+              style="
+                background-image:
+                  linear-gradient(
+                    135deg,
+                    rgba(13, 46, 51, 0.4) 0%,
+                    rgba(251, 146, 158, 0.4) 100%
+                  ),
+                  url(&quot;./Assets/Images/Impro.webp&quot;);
+                background-size: cover;
+                background-position: center;
+              "
+            >
               <span>2024</span>
               <h4>Improvindo</h4>
             </div>
@@ -372,7 +394,18 @@
             class="group bg-white rounded-2xl overflow-hidden shadow-md card-hover project-card fade-in border border-gray-100"
           >
             <div
-              class="h-48 bg-rose flex items-center justify-center p-8 text-white text-center relative overflow-hidden"
+              class="h-48 flex items-center justify-center p-8 text-white text-center relative overflow-hidden"
+              style="
+                background-image:
+                  linear-gradient(
+                    135deg,
+                    rgba(13, 46, 51, 0.3) 0%,
+                    rgba(13, 46, 51, 0.3) 100%
+                  ),
+                  url(&quot;./Assets/Images/PKM.webp&quot;);
+                background-size: cover;
+                background-position: center;
+              "
             >
               <i class="fas fa-trash-can text-6xl opacity-10 absolute"></i>
             </div>
@@ -416,7 +449,7 @@
                     rgba(13, 46, 51, 0.3) 0%,
                     rgba(13, 46, 51, 0.3) 100%
                   ),
-                  url(&quot;./Assets/Images/EcoRise Turtle Conservation_Dinda.webp&quot;);
+                  url(&quot;./Assets/Images/tukik.webp&quot;);
                 background-size: cover;
                 background-position: center;
               "
@@ -455,7 +488,18 @@
             class="group bg-white rounded-2xl overflow-hidden shadow-md card-hover project-card fade-in border border-gray-100"
           >
             <div
-              class="h-48 bg-rose flex items-center justify-center p-8 text-white text-center relative overflow-hidden"
+              class="h-48 flex items-center justify-center p-8 text-white text-center relative overflow-hidden"
+              style="
+                background-image:
+                  linear-gradient(
+                    135deg,
+                    rgba(13, 46, 51, 0.3) 0%,
+                    rgba(13, 46, 51, 0.3) 100%
+                  ),
+                  url(&quot;./Assets/Images/Krikan.webp&quot;);
+                background-size: cover;
+                background-position: center;
+              "
             >
               <i class="fas fa-fish text-6xl opacity-10 absolute"></i>
             </div>
@@ -532,7 +576,18 @@
             class="group bg-white rounded-2xl overflow-hidden shadow-md card-hover project-card fade-in border border-gray-100"
           >
             <div
-              class="h-48 bg-rose flex items-center justify-center p-8 text-white text-center relative overflow-hidden"
+              class="h-48 flex items-center justify-center p-8 text-white text-center relative overflow-hidden"
+              style="
+                background-image:
+                  linear-gradient(
+                    135deg,
+                    rgba(13, 46, 51, 0.3) 0%,
+                    rgba(13, 46, 51, 0.3) 100%
+                  ),
+                  url(&quot;./Assets/Images/event.webp&quot;);
+                background-size: cover;
+                background-position: center;
+              "
             >
               <i class="fas fa-users text-6xl opacity-10 absolute"></i>
             </div>
@@ -619,6 +674,16 @@
               class="fab fa-instagram text-3xl group-hover:scale-110 transition-transform"
             ></i>
             <span class="font-medium text-lg">@dindants_a</span>
+          </a>
+          <a
+            href="https://www.linkedin.com/in/dinda-natasyaartaviana-a0181b340?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
+            target="_blank"
+            class="flex items-center gap-3 text-teal-dark hover:text-rose transition-colors group"
+          >
+            <i
+              class="fab fa-linkedin text-3xl group-hover:scale-110 transition-transform"
+            ></i>
+            <span class="font-medium text-lg">LinkedIn</span>
           </a>
         </div>
         <hr class="border-gray-100 mb-8 w-24 mx-auto" />
